HTTP status codes and Swagger
